tests/dataset/tpc-h/compiler/cpp/q4.error
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2&, auto:3&)> [with auto:2 = std::pair<std::any, Result>; auto:3 = std::pair<std::any, Result>]’:
/usr/include/c++/13/bits/predefined_ops.h:158:30:   required from ‘constexpr bool __gnu_cxx::__ops::_Iter_comp_iter<_Compare>::operator()(_Iterator1, _Iterator2) [with _Iterator1 = __gnu_cxx::__normal_iterator<std::pair<std::any, Result>*, std::vector<std::pair<std::any, Result> > >; _Iterator2 = __gnu_cxx::__normal_iterator<std::pair<std::any, Result>*, std::vector<std::pair<std::any, Result> > >; _Compare = main()::<lambda()>::<lambda(auto:2&, auto:3&)>]’
/usr/include/c++/13/bits/stl_algo.h:1819:14:   required from ‘void std::__insertion_sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<pair<any, Result>*, vector<pair<any, Result> > >; _Compare = __gnu_cxx::__ops::_Iter_comp_iter<main()::<lambda()>::<lambda(auto:2&, auto:3&)> >]’
/usr/include/c++/13/bits/stl_algo.h:1859:25:   required from ‘void std::__final_insertion_sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<pair<any, Result>*, vector<pair<any, Result> > >; _Compare = __gnu_cxx::__ops::_Iter_comp_iter<main()::<lambda()>::<lambda(auto:2&, auto:3&)> >]’
/usr/include/c++/13/bits/stl_algo.h:1950:31:   required from ‘void std::__sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<pair<any, Result>*, vector<pair<any, Result> > >; _Compare = __gnu_cxx::__ops::_Iter_comp_iter<main()::<lambda()>::<lambda(auto:2&, auto:3&)> >]’
/usr/include/c++/13/bits/stl_algo.h:4894:18:   required from ‘void std::sort(_RAIter, _RAIter, _Compare) [with _RAIter = __gnu_cxx::__normal_iterator<pair<any, Result>*, vector<pair<any, Result> > >; _Compare = main()::<lambda()>::<lambda(auto:2&, auto:3&)>]’
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:208:14:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: error: no match for ‘operator<’ (operand types are ‘std::any’ and ‘std::any’)
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:835:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator<(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  835 |     operator<(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:835:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:455:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator<(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  455 |     operator<(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:455:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:500:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator<(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  500 |     operator<(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:500:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1705:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator<(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1705 |     operator<(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1705:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1770:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator<(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1770 |     operator<(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1770:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:4:
/usr/include/c++/13/string_view:671:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator<(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  671 |     operator< (basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:671:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/string_view:678:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator<(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  678 |     operator< (basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:678:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/string_view:686:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator<(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  686 |     operator< (__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:686:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3829:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3829 |     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3829:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3843:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3843 |     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3843:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3856:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3856 |     operator<(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3856:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   mismatched types ‘const _CharT*’ and ‘std::any’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1961:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator<(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1961 |     operator<(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1961:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/map:63,
                 from /tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:5:
/usr/include/c++/13/bits/stl_map.h:1551:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator<(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1551 |     operator<(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1551:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::map<_Key, _Tp, _Compare, _Allocator>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1172:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator<(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1172 |     operator<(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1172:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:2079:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator<(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2079 |     operator<(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2079:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq42689721639/001/prog.cpp:209:53: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
  209 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:324:3: note: candidate: ‘bool std::operator<(const error_code&, const error_code&)’
  324 |   operator<(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:324:31: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  324 |   operator<(const error_code& __lhs, const error_code& __rhs) noexcept
      |             ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:507:3: note: candidate: ‘bool std::operator<(const error_condition&, const error_condition&)’
  507 |   operator<(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:507:36: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  507 |   operator<(const error_condition& __lhs,
      |             ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
